<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateCuidador_animals extends Migration{
	public function up(){ 
 		Schema::create('cuidador_animals', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->integer('cuidador_id');
			$table->integer('animal_id');
			$table->timestamps();

			$table->foreign('cuidador_id')->references('id')->on('cuidador')->onDelete('cascade');
            $table->foreign('animal_id')->references('id')->on('animal')->onDelete('cascade');
		});
 	} 
	public function down(){
 
	} 
}